feat:Android 端扫码页面UI修改
1. 添加扫码框下面的提示语
2. 添加type为1情况的扫码界面展示

--- a/android/src/main/res/layout/activity_barcode_scanner.xml
+++ b/android/src/main/res/layout/activity_barcode_scanner.xml
@@ -27,6 +27,7 @@
             android:src="@drawable/icon_back"/>
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/add_search_switch"
@@ -93,6 +94,5 @@
 
 
     </LinearLayout>
-
 
 </FrameLayout>
