--- a/android/src/main/res/layout/activity_barcode_scanner.xml
+++ b/android/src/main/res/layout/activity_barcode_scanner.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <de.mintware.barcode_scan.ZXingAutofocusScannerView
         android:id="@+id/scannerView"
         android:layout_width="match_parent"
@@ -15,6 +14,8 @@
         android:theme="@style/Theme.MaterialComponents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:paddingTop="@dimen/status_bar_height"
         android:gravity="center_vertical">
         <ImageView
             android:id="@+id/back"
@@ -90,8 +91,5 @@
                 android:textColor="#80FFFFFF"/>
 
         </LinearLayout>
-
-
     </LinearLayout>
-
 </FrameLayout>
